[gd_scene load_steps=44 format=3 uid="uid://d02htprg20v78"]

[ext_resource type="Script" path="res://Enemy/mini_boss.gd" id="1_15nvh"]
[ext_resource type="Texture2D" uid="uid://dnrr1prh0aahe" path="res://assets/Enemy/mini_boss_front.PNG" id="1_lu6na"]
[ext_resource type="Texture2D" uid="uid://bu130eog00bsc" path="res://assets/Enemy/mini_boss_back.PNG" id="2_3csv1"]
[ext_resource type="Texture2D" uid="uid://da0ecc2w0mc14" path="res://assets/icons/healthbar_red.PNG" id="3_r8ljw"]
[ext_resource type="Texture2D" uid="uid://dl3fqnmjdh2qu" path="res://assets/Enemy/mini_boss_side.PNG" id="4_yyo82"]
[ext_resource type="Texture2D" uid="uid://b2s76ipg0jqbx" path="res://assets/Enemy/mini_boss_back_dead.PNG" id="5_7op3u"]
[ext_resource type="AudioStream" uid="uid://dr3dkiytgvo4y" path="res://assets/Audio/slash1-94367.mp3" id="5_xdbhk"]
[ext_resource type="Texture2D" uid="uid://sn2qk61jomqm" path="res://assets/Enemy/mini_boss_front_dead.PNG" id="6_qkct5"]
[ext_resource type="Texture2D" uid="uid://dr16233wyq63f" path="res://assets/icons/healthbar_filled.PNG" id="7_0ipxf"]
[ext_resource type="Texture2D" uid="uid://cwan88y4qoa88" path="res://assets/Enemy/mini_boss_side_dead.PNG" id="7_wiuwm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_63ki2"]
atlas = ExtResource("2_3csv1")
region = Rect2(0, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ooyn"]
atlas = ExtResource("2_3csv1")
region = Rect2(480, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7bh6"]
atlas = ExtResource("2_3csv1")
region = Rect2(960, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdyhx"]
atlas = ExtResource("1_lu6na")
region = Rect2(480, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_hymxw"]
atlas = ExtResource("1_lu6na")
region = Rect2(0, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_1762n"]
atlas = ExtResource("1_lu6na")
region = Rect2(960, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbneh"]
atlas = ExtResource("4_yyo82")
region = Rect2(0, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_1s4l5"]
atlas = ExtResource("4_yyo82")
region = Rect2(480, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmaqt"]
atlas = ExtResource("4_yyo82")
region = Rect2(960, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_v706i"]
atlas = ExtResource("2_3csv1")
region = Rect2(0, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvt0r"]
atlas = ExtResource("1_lu6na")
region = Rect2(0, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdd7p"]
atlas = ExtResource("4_yyo82")
region = Rect2(0, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjnn1"]
atlas = ExtResource("2_3csv1")
region = Rect2(0, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3ik3"]
atlas = ExtResource("2_3csv1")
region = Rect2(960, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhdip"]
atlas = ExtResource("1_lu6na")
region = Rect2(0, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_ii8ct"]
atlas = ExtResource("1_lu6na")
region = Rect2(960, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_vw3v2"]
atlas = ExtResource("4_yyo82")
region = Rect2(0, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbqnx"]
atlas = ExtResource("4_yyo82")
region = Rect2(960, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_05o34"]
atlas = ExtResource("2_3csv1")
region = Rect2(0, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2n2f"]
atlas = ExtResource("2_3csv1")
region = Rect2(1440, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrdni"]
atlas = ExtResource("2_3csv1")
region = Rect2(960, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_5w458"]
atlas = ExtResource("2_3csv1")
region = Rect2(1920, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_rg7eo"]
atlas = ExtResource("1_lu6na")
region = Rect2(0, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2p51"]
atlas = ExtResource("1_lu6na")
region = Rect2(1440, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bcwt"]
atlas = ExtResource("1_lu6na")
region = Rect2(960, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgwsr"]
atlas = ExtResource("1_lu6na")
region = Rect2(1920, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_amo17"]
atlas = ExtResource("4_yyo82")
region = Rect2(0, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_xo4yi"]
atlas = ExtResource("4_yyo82")
region = Rect2(1920, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_52ebe"]
atlas = ExtResource("4_yyo82")
region = Rect2(960, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jfu3"]
atlas = ExtResource("4_yyo82")
region = Rect2(1440, 0, 480, 480)

[sub_resource type="SpriteFrames" id="SpriteFrames_k1nce"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_63ki2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ooyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7bh6")
}],
"loop": true,
"name": &"attack_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdyhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hymxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1762n")
}],
"loop": true,
"name": &"attack_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbneh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1s4l5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmaqt")
}],
"loop": true,
"name": &"attack_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_7op3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v706i")
}],
"loop": true,
"name": &"dead_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_qkct5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvt0r")
}],
"loop": true,
"name": &"dead_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_wiuwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdd7p")
}],
"loop": true,
"name": &"dead_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjnn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3ik3")
}],
"loop": true,
"name": &"idle_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhdip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ii8ct")
}],
"loop": true,
"name": &"idle_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vw3v2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbqnx")
}],
"loop": true,
"name": &"idle_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_05o34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2n2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrdni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5w458")
}],
"loop": true,
"name": &"walk_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rg7eo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2p51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bcwt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgwsr")
}],
"loop": true,
"name": &"walk_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_amo17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xo4yi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52ebe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jfu3")
}],
"loop": true,
"name": &"walk_side",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8yud1"]
size = Vector2(92.2674, 137.083)

[sub_resource type="CircleShape2D" id="CircleShape2D_xbooj"]
radius = 161.154

[node name="mini_boss" type="CharacterBody2D"]
scale = Vector2(0.379332, 0.379332)
collision_layer = 64
collision_mask = 39
script = ExtResource("1_15nvh")

[node name="health_bar" type="TextureProgressBar" parent="."]
z_index = 2
y_sort_enabled = true
texture_filter = 1
offset_left = -81.7226
offset_top = -268.894
offset_right = 238.278
offset_bottom = 51.1066
scale = Vector2(0.541393, 0.398135)
max_value = 150.0
value = 150.0
texture_under = ExtResource("3_r8ljw")
texture_progress = ExtResource("7_0ipxf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -34)
scale = Vector2(0.597041, 0.597041)
sprite_frames = SubResource("SpriteFrames_k1nce")
animation = &"idle_side"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.3181, -34.2707)
shape = SubResource("RectangleShape2D_8yud1")

[node name="attacking_area" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="attacking_area"]
position = Vector2(-2.63621, -18.4535)
shape = SubResource("CircleShape2D_xbooj")

[node name="attack_timer" type="Timer" parent="."]
wait_time = 0.6

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_xdbhk")
bus = &"Sfx"

[node name="death_timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="damage_rate" type="Timer" parent="."]
wait_time = 1.1
one_shot = true

[connection signal="body_entered" from="attacking_area" to="." method="_on_attacking_area_body_entered"]
[connection signal="body_exited" from="attacking_area" to="." method="_on_attacking_area_body_exited"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="damage_rate" to="." method="_on_damage_rate_timeout"]
